[af-139] feat: 실시간 영업현황 및 전통주 에 대한 상세 정보 표시 구현
현제 레스토랑 영업 여부 확인 및 현제 레스토랑에서 판매하는 전통주 이미지 기능 구현